fixed small issues with spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -634,9 +634,11 @@ h6, .h6 {
 
 }
 .img-skills {
-  width: 300px;
+  width: 350px;
   padding: 20px;
   float: right;
+  margin-left: 40px;
+  margin-top: -18px;
 }
 .display-1 {
   font-size: 6rem;
@@ -820,9 +822,10 @@ section.carousel-resume-section {
 }
 .category-title {
   padding-left: 3rem;
-  margin-top: 3rem;
-  padding-top: 1rem;
+  margin-top: 1rem;
+  padding-top: 2rem;
   border-top: 2px solid lavender;
+  padding-bottom: 0rem;
 }
 @media (prefers-color-scheme: dark) {
   section.resume-section {
@@ -855,7 +858,8 @@ section.carousel-resume-section {
   }
   .gallery-panorama-wide {
     width: 21rem !important;
-    height: 9rem;
+    
+    
   }
   .img-vertical {
     height: 30rem;
@@ -864,9 +868,10 @@ section.carousel-resume-section {
     flex-direction: column;
   }
   .skills-column {
-    max-width: 100%;
+    max-width: 500px;
     padding: 15px;
     text-align: justify;
+    line-height: 1.3;
   }
   .img-skills {
     float: none;
@@ -916,9 +921,10 @@ section.carousel-resume-section {
     flex-direction: column;
   }
   .skills-column {
-    max-width: 100%;
+    max-width: 500px;
     padding: 15px;
     text-align: justify;
+    line-height: 1.3;
   }
   .navbar .logo-icon {
     width: 90px;
@@ -1150,7 +1156,7 @@ section.carousel-resume-section {
   }
   .panorama-item, .gallery-panorama-wide {
     width: 60rem !important;
-    height: 19rem;
+    height: 22rem;
   }
   .portfolio-img-fluid {
     width: 100%;
@@ -1178,7 +1184,7 @@ section.carousel-resume-section {
     object-fit: cover;
   }
   .horizontal {
-    height: 20rem;
+    height: 22rem;
   }
   .img-vertical {
     width: 100%;
